--- a/cv.html
+++ b/cv.html
@@ -19,10 +19,9 @@
     <nav class="navbar fixed-top navbar-light bg-info">
       <div class="container-fluid">
         <a class="navbar-brand active text-white" aria-current="page" href="index.html">Home</a>
-        <a class="nav-link text-white" href="blog.html">Blog</a>
         <a class="nav-link text-white" href="games.html">Games</a>
-        <a class="nav-link text-white" href="web.html">Web Projects</a>
-        <a class="nav-link text-white" href="#">CV</a>
+        <a class="nav-link text-white" href="web.html">Websites</a>
+        <a class="nav-link text-white" href="#">About Me</a>
         <a class="nav-link text-white" href="contact.html">Contact</a>
       </div>
     </nav>
