--- a/games.html
+++ b/games.html
@@ -10,18 +10,15 @@
   </head>
   <body>
     <!-- nav -->
-    <nav class="navbar fixed-top navbar-light bg-info mb-5">
+    <nav class="navbar fixed-top navbar-light bg-info">
       <div class="container-fluid">
         <a class="navbar-brand active text-white" aria-current="page" href="index.html">Home</a>
-        <a class="nav-link text-white" href="blog.html">Blog</a>
         <a class="nav-link text-white" href="#">Games</a>
-        <a class="nav-link text-white" href="web.html">Web Projects</a>
-        <a class="nav-link text-white" href="cv.html">CV</a>
+        <a class="nav-link text-white" href="web.html">Websites</a>
+        <a class="nav-link text-white" href="cv.html">About Me</a>
         <a class="nav-link text-white" href="contact.html">Contact</a>
       </div>
     </nav>
-
-
 
     <section class="py-5 text-center container mb-4">
       <div class="row py-lg-5">
