--- a/games/blocky.html
+++ b/games/blocky.html
@@ -6,81 +6,47 @@
     <title>Neils | Blockbreaker </title>
     <link href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto:wght@300&family=Sacramento&display=swap" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js" integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js" integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG" crossorigin="anonymous"></script>
-    <!-- Custom styles for this template -->
-    <link href="../css/offcanvas.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+
   </head>
 
-  <body class="bg-light">
-    <!-- navbar start -->
-    <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-navy" aria-label="Main navigation">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">Neil Mckenna</a>
-        <button class="navbar-toggler p-0 border-0" type="button" data-bs-toggle="offcanvas" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
+  <body class="bg-light container-fluid">
+    <div class="container-fluid">
+      <div class="nav-scroller bg--body shadow-sm">
+        <nav class="nav nav-underline" aria-label="Secondary navigation">
+          <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+          <a class="nav-link" href="../blog.html">Blog</a>
+          <a class="nav-link" href="../games.html">Games</a>
+          <a class="nav-link" href="../web.html">Web Projects</a>
+          <a class="nav-link" href="../cv.html">CV</a>
+          <a class="nav-link" href="../contact.html">Contact</a>
 
-        <div class="navbar-collapse offcanvas-collapse" id="navbarsExampleDefault">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="../blog.html">Blog</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="../games.html">Games</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="../web.html">Web Projects</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="../cv.html">CV</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="../contact.html">Contact</a>
-            </li>
-          </ul>
-          <form class="d-flex">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">Search</button>
-          </form>
+        </nav>
+      </div>
+      <!-- nav end -->
+      <div class="container mx-auto px-5">
+        <div class="iframe-div card mx-auto"  align="center">
+          <div class="card-title pt-3">
+            <h3>Block Breaker</h3>
+            <p>This is a blockbreaking game similiar to pong try to stop the ball from hitting the ground</p>
+            <p>This game certainly need finessse but its one for my first games I made in unity</p>
+          </div>
+          <iframe src="https://i.simmer.io/@emberhawk/neil-breakblocker?skin=smg"
+          style="min-height: 500px;width:auto;" margin="auto" scrolling="no" title="Blockbreaker" ></iframe>
+          <hr>
+          <a class="btn btn-primary" href="../games.html">Back to Games List</a>
         </div>
       </div>
-    </nav>
-
-    <div class="nav-scroller bg--body shadow-sm">
-      <nav class="nav nav-underline" aria-label="Secondary navigation">
-        <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
-        <a class="nav-link" href="../blog.html">Blog</a>
-        <a class="nav-link" href="../games.html">Games</a>
-        <a class="nav-link" href="../web.html">Web Projects</a>
-        <a class="nav-link" href="../cv.html">CV</a>
-        <a class="nav-link" href="../contact.html">Contact</a>
-
-      </nav>
-    </div>
-    <!-- nav end -->
 
 
 
-    <div class="iframe-div card text-center">
-      <div class="card-title pt-3">
-        <h3>Block Breaker</h3>
-        <p>This is a blockbreaking game similiar to pong try to stop the ball from hitting the ground</p>
-        <p>This game certainly need finessse but its one for my first games I made in unity</p>
-      </div>
-      <iframe src="https://i.simmer.io/@emberhawk/neil-breakblocker?skin=smg" style="height:600px;width:80%;" margin="auto" scrolling="no" title="Blockbreaker" ></iframe>
-      <hr>
-      <a class="btn btn-primary" href="../games.html">Back to Games List</a>
     </div>
 
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-    <script src="../js/offcanvas.js"></script>
+
+
+
 
   </body>
 </html>
