--- a/games/minecraft.html
+++ b/games/minecraft.html
@@ -38,42 +38,6 @@
 
   <body class="bg-light">
 
-    <!-- navbar start -->
-    <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-navy" aria-label="Main navigation">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">Neil Mckenna</a>
-        <button class="navbar-toggler p-0 border-0" type="button" data-bs-toggle="offcanvas" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="navbar-collapse offcanvas-collapse" id="navbarsExampleDefault">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="../blog.html">Blog</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="../games.html">Games</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="../web.html">Web Projects</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="../cv.html">CV</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="../contact.html">Contact</a>
-            </li>
-          </ul>
-          <form class="d-flex">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">Search</button>
-          </form>
-        </div>
-      </div>
-    </nav>
 
     <div class="nav-scroller bg--body shadow-sm">
       <nav class="nav nav-underline" aria-label="Secondary navigation">
@@ -93,7 +57,7 @@
         <h3>Minecraft Clone</h3>
         <p>Scroll Down, Instructions on how to play are below the iframe</p>
       </div>
-      <iframe src="https://i.simmer.io/@emberhawk/minecraft-clone" style="height:600px;width:80%;" margin="auto" scrolling="no" title="Zombie Runner"></iframe>
+      <iframe src="https://i.simmer.io/@emberhawk/minecraft-clone" style="min-height: 500px;width:auto;" margin="auto" scrolling="no" title="Zombie Runner"></iframe>
       <hr>
       <p>You can use  mouse and keyboard, one left click to destroy blocks , one right click to build</p>
       <p>
