--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="Neil Mckenna">
-
     <link rel="stylesheet" href="css/main.css">
 
 
@@ -15,34 +14,55 @@
     <title>Neil New Portfolio</title>
 
   </head>
-  <body>
+  <body class="bg-light">
 
     <!-- nav -->
     <nav class="navbar fixed-top navbar-light bg-info">
       <div class="container-fluid">
         <a class="navbar-brand active text-white" aria-current="page" href="#">Home</a>
-        <a class="nav-link text-white" href="blog.html">Blog</a>
         <a class="nav-link text-white" href="games.html">Games</a>
-        <a class="nav-link text-white" href="web.html">Web Projects</a>
-        <a class="nav-link text-white" href="cv.html">CV</a>
+        <a class="nav-link text-white" href="web.html">Websites</a>
+        <a class="nav-link text-white" href="cv.html">About Me</a>
         <a class="nav-link text-white" href="contact.html">Contact</a>
       </div>
     </nav>
 
     <!-- main container -->
-    <div class="container-fluid mt-4 pt-4">
-      <div>
-        <h1 class="h1 text-center">Neil Mckenna</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <div class="container-fluid mb-4" style="margin-top: 200px;">
+      <div class="container mt-4">
+        <h1 class="h1 text-center mb-4">Neil Mckenna</h1>
+      </div>
+
+      <div class="container">
+        <h4 class="text-center my-4 lead">What have I been up to recently</h4>
+        <div class="container">
+          <h4><u>Home Working</u></h4>
+          <p>
+            <ol>
+              <li>I have been at home studying more Unity/C# Game Programming currently working (debugging) a 2D random dungeon shooter course</li>
+              <li>I also decided to fix my portfolios as they need work(still under construction)</li>
+              <li>I have playing alot of elden ring up to ng2 (newgame + 2)</li>
+              <li>Setup up a linkedin profile to try and appeal to a wider audience and actually appear professional?</li>
+            </ol>
+
+
+
+
+          </p>
+        </div>
+
+        <div class="container">
+          <h4><u>Leaving McewanFraserLegal</u></h4>
+          <p>
+            In march I left mcewanfraserlegal to pursue other enterprises.
+            I spent 8 months as a software developer mainly php
+          </p>
+        </div>
 
       </div>
 
 
     </div>
-
-
-
-
 
 
     <!-- boostrap js  -->
