--- a/web.html
+++ b/web.html
@@ -16,22 +16,22 @@
   <body class="bg-light">
 
     <!-- nav -->
+
     <nav class="navbar fixed-top navbar-light bg-info">
       <div class="container-fluid">
         <a class="navbar-brand active text-white" aria-current="page" href="index.html">Home</a>
-        <a class="nav-link text-white" href="blog.html">Blog</a>
         <a class="nav-link text-white" href="games.html">Games</a>
-        <a class="nav-link text-white" href="web.html">Web Projects</a>
-        <a class="nav-link text-white" href="cv.html">CV</a>
+        <a class="nav-link text-white" href="web.html">Websites</a>
+        <a class="nav-link text-white" href="cv.html">About Me</a>
         <a class="nav-link text-white" href="#">Contact</a>
       </div>
     </nav>
 
-    <main class="container">
-      <section class="py-5 text-center container">
+    <main class="container pt-5" style="margin-top: 20px;">
+      <section class="py-3 text-center container mt-5">
       <div class="row py-lg-5">
         <div class="col-lg-6 col-md-8 mx-auto">
-          <h1 class="fw-light">My Web Projects</h1>
+          <h1 class="fw-light mt-5">My Web Projects</h1>
           <p class="lead text-muted">Here I have created a gallery of web projects I have been studying with.</p>
           <em>Most of these are not my code but I have coded along to create them and learned on how to manipulate and control.</em>
 
@@ -42,7 +42,7 @@
     <div class="album py-2 bg-light">
       <div class="container">
 
-        <h6 class="display-6 text-center mb-3 pe-1 ps-1 pt-1 bg-info rounded text-white">Click the image links to check out the website!</h6>
+        <h6 class="h-6 text-center mb-3 pe-1 ps-1 pt-1 bg-info rounded text-white">Click the image links to check out the website!</h6>
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
 
           <!-- start of cols -->
@@ -50,7 +50,7 @@
           <div class="col-lg-4 col-md-6 col-sm-12">
             <div class="card shadow-sm">
               <div class="card-body text-center" style="height: 420px;">
-                <h2 class="card-title font-monospace fw-bolder fst-italic display-1 shadow p-3 mb-5 bg-body rounded-pill">Drums</h2>
+                <h4 class="card-title font-monospace fw-bolder fst-italic shadow p-3 mb-5 bg-body rounded-pill">Drums</h4>
                 <a href="internal/drums/index.html"><img src="images/website-screens/drums-screen.png" class="img-thumbnail"></img></a>
                 <p class="card-text"><small>This is a Drum kit website. Play the drums through key presses and clicks.</small></p>
               </div>
@@ -60,7 +60,7 @@
           <div class="col-lg-4 col-md-6 col-sm-12">
             <div class="card shadow-sm">
               <div class="card-body text-center" style="height: 420px;">
-                <h2 class="card-title font-monospace fw-bolder fst-italic display-1 shadow p-3 mb-5 bg-body rounded-pill">Ruby on Rails</h2>
+                <h4 class="card-title font-monospace fw-bolder fst-italic shadow p-3 mb-5 bg-body rounded-pill">Ruby on Rails</h4>
                 <a href="https://neilmckenna-portfolio.herokuapp.com/"><img src="images/website-screens/RoR-screen.png" class="img-thumbnail"></img></a>
                 <small>It may take time to load</small>
                 <p class="card-text"><small>Ruby on Rails Portfolio Project (unfinished) using RoR 5.4. Added to show I can do RoR framework. </small></p>
@@ -71,50 +71,10 @@
           <div class="col-lg-4 col-md-6 col-sm-12">
             <div class="card shadow-sm">
               <div class="card-body text-center" style="height: 420px;">
-                <h2 class="card-title font-monospace fw-bolder fst-italic display-1 shadow p-3 mb-5 bg-body rounded-pill">Shploggo</h2>
+                <h4 class="card-title font-monospace fw-bolder fst-italic shadow p-3 mb-5 bg-body rounded-pill">Shploggo</h4>
                 <a href="https://shploggo.herokuapp.com/"><img src="images/website-screens/shploggo-screen.png" class="img-thumbnail" height="225px"></img></a>
                 <small>It may take time to load</small>
                 <p class="card-text"><small>This is an early RoR Project I did from youtube tutorials.</small></p>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 col-sm-12">
-            <div class="card shadow-sm">
-              <div class="card-body text-center" style="height: 420px;">
-                <h2 class="card-title font-monospace fw-bolder fst-italic display-1 shadow p-3 mb-5 bg-body rounded-pill">Portfolio</h2>
-                <a href="internal/portfolio-theme/index.html"><img src="images/website-screens/portfolio-theme-screen.png" class="img-thumbnail"></img></a>
-                <p class="card-text"><small>This is a Bootstrap 5 theme for a sample portfolio website using Bootstrap 5 tools.</small></p>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 col-sm-12">
-            <div class="card shadow-sm">
-              <div class="card-body text-center" style="height: 420px;">
-                <h2 class="card-title font-monospace fw-bolder fst-italic display-1 shadow p-3 mb-5 bg-body rounded-pill">Photography</h2>
-                <a href="internal/photography/index.html"><img src="images/website-screens/photography-screen.png" class="img-thumbnail"></img></a>
-                <p class="card-text"><small>This is Bootstrap 5 Theme for displaying photos and other galleries.</small></p>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 col-sm-12">
-            <div class="card shadow-sm">
-              <div class="card-body text-center" style="height: 420px;">
-                <h2 class="card-title font-monospace fw-bolder fst-italic display-1 shadow p-3 mb-5 bg-body rounded-pill">Music</h2>
-                <a href="internal/music/index.html"><img src="images/website-screens/music-screen.png" class="img-thumbnail"></img></a>
-                <p class="card-text"><small>This is a Bootstrap 5 Theme for display a music website.</small></p>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 col-sm-12">
-            <div class="card shadow-sm">
-              <div class="card-body text-center" style="height: 420px;">
-                <h2 class="card-title font-monospace fw-bolder fst-italic display-1 shadow p-3 mb-5 bg-body rounded-pill">Blog</h2>
-                <a href="internal/blog/index.html"><img src="images/website-screens/blog-example-screen.png" class="img-thumbnail"></img></a>
-                <p class="card-text"><small>This is a Bootstrap 5 Theme for display a standard looking blog.</small></p>
               </div>
             </div>
           </div>
