--- a/games/rocket.html
+++ b/games/rocket.html
@@ -18,12 +18,10 @@
     <div class="nav-scroller bg--body shadow-sm">
       <nav class="nav nav-underline" aria-label="Secondary navigation">
         <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
-        <a class="nav-link" href="../blog.html">Blog</a>
         <a class="nav-link" href="../games.html">Games</a>
-        <a class="nav-link" href="../web.html">Web Projects</a>
-        <a class="nav-link" href="../cv.html">CV</a>
+        <a class="nav-link" href="../web.html">Websites</a>
+        <a class="nav-link" href="../cv.html">About Me</a>
         <a class="nav-link" href="../contact.html">Contact</a>
-
       </nav>
     </div>
     <!-- nav end -->
