--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="Neil Mckenna">
-    <link rel="stylesheet" href="css/main.css">
+    <!-- <link rel="stylesheet" href="css/main.css"> -->
 
 
     <!-- boostrap 5.1.3 -->
@@ -14,7 +14,7 @@
     <title>Neil New Portfolio</title>
 
   </head>
-  <body class="bg-light">
+  <body class="" style="background-color: #D3D3D3;">
 
     <!-- nav -->
     <nav class="navbar fixed-top navbar-light bg-info">
@@ -28,34 +28,48 @@
     </nav>
 
     <!-- main container -->
-    <div class="container-fluid mb-4" style="margin-top: 200px;">
-      <div class="container mt-4">
-        <h1 class="h1 text-center mb-4">Neil Mckenna</h1>
+    <div class="container-fluid" style="margin-top: 200px;">
+      <div class="container">
+        <h1 class="h1 text-center p-3 my-2"><em><strong>Neil Mckenna</strong></em></h1>
+        <h4 class="text-center my-4 lead"><u><strong>What have I been up to recently</strong></u></h4>
+
       </div>
 
-      <div class="container">
-        <h4 class="text-center my-4 lead">What have I been up to recently</h4>
-        <div class="container">
-          <h4><u>Home Working</u></h4>
+      <div class="container rounded bg-light">
+
+        <div class="container bg-warning rounded pt-2">
+          <h4><u>Fixing This Portfolio</u></h4>
+          <p>
+            Currently working on improving this site for the future.
+            I also decided to fix my portfolios as they need work(still under construction)
+          </p>
+        </div>
+
+
+        <div class="container rounded">
+          <h4><u>Home Studying</u></h4>
           <p>
             <ol>
               <li>I have been at home studying more Unity/C# Game Programming currently working (debugging) a 2D random dungeon shooter course</li>
-              <li>I also decided to fix my portfolios as they need work(still under construction)</li>
               <li>I have playing alot of elden ring up to ng2 (newgame + 2)</li>
               <li>Setup up a linkedin profile to try and appeal to a wider audience and actually appear professional?</li>
             </ol>
 
-
-
-
           </p>
         </div>
 
-        <div class="container">
-          <h4><u>Leaving McewanFraserLegal</u></h4>
+        <div class="container rounded">
+          <h4><u>Leaving McewanFraserLegal Ltd</u></h4>
           <p>
             In march I left mcewanfraserlegal to pursue other enterprises.
-            I spent 8 months as a software developer mainly php
+            I spent 8 months as a software developer mainly maintaining a php site.
+          </p>
+        </div>
+
+        <div class="container rounded">
+          <h4><u>Studying during Covid</u></h4>
+          <p>
+            I spent over a year learning Unity / Game and Web Development.
           </p>
         </div>
 
