--- a/cv.html
+++ b/cv.html
@@ -13,11 +13,11 @@
 
   </head>
 
-  <body class="bg-light">
+  <body class="bg-gray">
 
     <!-- nav -->
     <nav class="navbar fixed-top navbar-light bg-info">
-      <div class="container-fluid">
+      <div class="container">
         <a class="navbar-brand active text-white" aria-current="page" href="index.html">Home</a>
         <a class="nav-link text-white" href="games.html">Games</a>
         <a class="nav-link text-white" href="web.html">Websites</a>
@@ -26,7 +26,59 @@
       </div>
     </nav>
 
-    <main class="container">
+    <main class="container bg-light rounded" style="margin-top: 100px;border: 2px solid black;">
+      <div class="p-2">
+        <h2 class="text-center"><u>Who Am I ? - <em>Neil Mckenna</em></u></h2>
+        <div class="row pt-4 mb-1">
+          <div class="col-sm-4 col-md-4 col-lg-4">
+            <figure class="">
+              <img class="img-fluid img-thumbnail" src="images/profile/neils-goofy-pic.jpg" alt="just a goofy picture of me">
+              <figcaption>Me Posing Awkwardly</figcaption>
+            </figure>
+          </div>
+          <div class="col-sm-8 col-md-8 col-lg-8 p-2">
+            <p>I am a Former Napier Student of Computer Science & Forensics</p>
+            <p>Currently 37 year old, (millenial) who grew up in Edinburgh<p>
+            <p>Just your typical techie {
+              pc-repair-man
+              ,game_developer
+              ,web_developer
+              ,network fixer  
+
+            } </p>
+            <p>An Avid Video Gamer and consumer of sports</p>
+            <p></p>
+          </div>
+        </div><!-- row end -->
+      </div>
+      <hr>
+
+      <div class="container rounded">
+        <h4><u>Home Studying</u></h4>
+        <p>
+          <ol>
+            <li>I have been at home studying more Unity/C# Game Programming currently working (debugging) on udemy course <a href="https://www.udemy.com/course/unity-2d-dungeon-gunner-roguelike-development-course/">2D random dungeon shooter course</a> </li>
+            <li>I have playing alot of <a href="https://en.wikipedia.org/wiki/Elden_Ring">Elden Ring</a> currently up to ng2</li>
+            <li>Setup up a <a href="https://www.linkedin.com/in/neil-mckenna-9b1406239/">LinkedIn Profile</a> to try and appeal to a wider audience and actually appear professional?</li>
+          </ol>
+
+        </p>
+      </div>
+
+      <div class="container rounded">
+        <h4><u>Leaving McewanFraserLegal Ltd</u></h4>
+        <p>
+          In march I left <a href="https://www.mcewanfraserlegal.co.uk/">McewanFraserLegal</a> to pursue other enterprises.
+          I spent 8 months as a software developer mainly maintaining an older php website.
+        </p>
+      </div>
+
+      <div class="container rounded">
+        <h4><u>Studying during Covid</u></h4>
+        <p>
+          I spent over a year learning Unity / Game and Web Development.
+        </p>
+      </div>
 
 
 
