--- a/games.html
+++ b/games.html
@@ -11,7 +11,7 @@
   <body>
     <!-- nav -->
     <nav class="navbar fixed-top navbar-light bg-info">
-      <div class="container-fluid">
+      <div class="container">
         <a class="navbar-brand active text-white" aria-current="page" href="index.html">Home</a>
         <a class="nav-link text-white" href="#">Games</a>
         <a class="nav-link text-white" href="web.html">Websites</a>
