--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <!-- nav -->
     <nav class="navbar fixed-top navbar-light bg-info">
-      <div class="container-fluid">
+      <div class="container">
         <a class="navbar-brand active text-white" aria-current="page" href="#">Home</a>
         <a class="nav-link text-white" href="games.html">Games</a>
         <a class="nav-link text-white" href="web.html">Websites</a>
@@ -37,41 +37,17 @@
 
       <div class="container rounded bg-light">
 
-        <div class="container bg-warning rounded pt-2">
+        <div class="container bg-warning rounded p-2 pt-2 py-2">
           <h4><u>Fixing This Portfolio</u></h4>
           <p>
             Currently working on improving this site for the future.
             I also decided to fix my portfolios as they need work(still under construction)
           </p>
+          <p>Please Browse the links at the top for more context<p>
         </div>
 
 
-        <div class="container rounded">
-          <h4><u>Home Studying</u></h4>
-          <p>
-            <ol>
-              <li>I have been at home studying more Unity/C# Game Programming currently working (debugging) a 2D random dungeon shooter course</li>
-              <li>I have playing alot of elden ring up to ng2 (newgame + 2)</li>
-              <li>Setup up a linkedin profile to try and appeal to a wider audience and actually appear professional?</li>
-            </ol>
 
-          </p>
-        </div>
-
-        <div class="container rounded">
-          <h4><u>Leaving McewanFraserLegal Ltd</u></h4>
-          <p>
-            In march I left mcewanfraserlegal to pursue other enterprises.
-            I spent 8 months as a software developer mainly maintaining a php site.
-          </p>
-        </div>
-
-        <div class="container rounded">
-          <h4><u>Studying during Covid</u></h4>
-          <p>
-            I spent over a year learning Unity / Game and Web Development.
-          </p>
-        </div>
 
       </div>
 
