--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
 
     <!-- nav -->
     <nav class="navbar fixed-top navbar-light bg-info">
-      <div class="container-fluid">
+      <div class="container">
         <a class="navbar-brand active text-white" aria-current="page" href="index.html">Home</a>
         <a class="nav-link text-white" href="games.html">Games</a>
         <a class="nav-link text-white" href="web.html">Websites</a>
