--- a/cv.html
+++ b/cv.html
@@ -43,7 +43,7 @@
                 <li>I am a Former Napier Student, Edinburgh College, Liberton High</li>
                 <li>(typical millenial) 37 year old who grew up mainly in Edinburgh</li>
                 <li>An avid Video Gamer and consumer of sports on tv</li>
-                <li>Career wise I am mainly things</li>
+                <li>Career wise I am many things</li>
                 <ol style="list-style:circle;">
                     <li>Techinical Support</li>
                     <li>PC Repair Man</li>
@@ -52,6 +52,7 @@
                     <li>Bad Sales Man</li>
                 </ol>
               <ol>
+
             </div>
 
           </div>
@@ -60,31 +61,100 @@
       <hr>
 
       <div id="cv" class="container rounded">
-        <h4><u>Home Studying</u></h4>
-        <p>
-          <ol>
-            <li>I have been at home studying more Unity/C# Game Programming currently working (debugging) on udemy course <a href="https://www.udemy.com/course/unity-2d-dungeon-gunner-roguelike-development-course/">2D random dungeon shooter course</a></li>
-            <li>I have playing alot of <a href="https://en.wikipedia.org/wiki/Elden_Ring">Elden Ring</a> currently up to ng2</li>
-            <li>Setup up a <a href="https://www.linkedin.com/in/neil-mckenna-9b1406239/">LinkedIn Profile</a> to try and appeal to a wider audience and actually appear professional?</li>
-          </ol>
+        <div style="margin-left: 100px;">
+          <h2><u>Summary</u></h2>
+          <p>
+            Currently changing my career vector towards software development.
+            I have always been into tech fields.
+            I though I would utilise github Pages to showcase some of the projects that I have been working on.
 
-        </p>
+          </p>
+          <p>This is a sales pitch at the end of the day! </p>
+        </div>
       </div>
 
       <div id="cv" class="container rounded">
-        <h4><u>Leaving McewanFraserLegal Ltd</u></h4>
-        <p>
-          In march I left <a href="https://www.mcewanfraserlegal.co.uk/">McewanFraserLegal</a> to pursue other enterprises.
-          I spent 8 months as a software developer mainly maintaining an older php website.
-        </p>
+        <div style="margin-left: 100px;">
+          <h2><u>Personality</u></h2>
+          <ol>
+            <li>For the HR inclined my MBTI : ENTP</li>
+          </ol>
+          </p>
+        </div>
+      </div>
+      <hr>
+      <div id="cv" class="container rounded">
+        <div style="margin-left: 100px;">
+          <h2><u>Work History</u></h2>
+          <ol>
+            <li>Software Developer / Web Developer (php) (9 months)</li>
+            <li>IT Officer (6 months)</li>
+            <li>IT Repair Man (6 months)</li>
+            <li>Help Desk (6 months)</li>
+            <li>Audio & Visual Technician (1 year 5 months)</li>
+          </ol>
+          </p>
+        </div>
       </div>
 
-      <div class="container rounded">
-        <h4><u>Studying during Covid</u></h4>
-        <p>
-          I spent over a year learning Unity / Game and Web Development.
-        </p>
+
+      <div id="cv" class="container rounded">
+        <div style="margin-left: 100px;">
+          <h2><u>Education</u></h2>
+          <ol style="list-style:upper-roman;">
+              <li>Napier University / BEng in Computer Security & Forensics</li>
+              <li>Edinburgh College / HNC & HND Technical Support</li>
+              <li>Liberton High School</li>
+          </ol>
+
+        </div>
+
       </div>
+      <hr>
+      <div id="cv" class="container rounded">
+        <div style="margin-left: 100px;">
+          <h2><u>Online Learning</u></h2>
+          <ol style="list-style:upper-roman;">
+              <li></li>
+
+          </ol>
+
+        </div>
+
+      </div>
+      <hr>
+
+      <div id="cv" class="" style="margin-left: 100px;">
+        <div  class="container rounded">
+          <h4><u>Home Studying</u></h4>
+          <p>
+            <ol>
+              <li>I have been at home studying more Unity/C# Game Programming currently working (debugging) on udemy course <a href="https://www.udemy.com/course/unity-2d-dungeon-gunner-roguelike-development-course/">2D random dungeon shooter course</a></li>
+              <li>I have playing alot of <a href="https://en.wikipedia.org/wiki/Elden_Ring">Elden Ring</a> currently up to ng2</li>
+              <li>Setup up a <a href="https://www.linkedin.com/in/neil-mckenna-9b1406239/">LinkedIn Profile</a> to try and appeal to a wider audience and actually appear professional?</li>
+            </ol>
+
+          </p>
+        </div>
+
+        <div  class="container rounded">
+          <h4><u>Leaving McewanFraserLegal Ltd</u></h4>
+          <p>
+            In march I left <a href="https://www.mcewanfraserlegal.co.uk/">McewanFraserLegal</a> to pursue other enterprises.
+            I spent 8 months as a software developer mainly maintaining an older php website.
+          </p>
+        </div>
+
+        <div  class="container rounded">
+          <h4><u>Studying during Covid</u></h4>
+          <p>
+            I spent over a year learning Unity / Game and Web Development.
+          </p>
+        </div>
+
+      </div>
+
+
 
 
 
